<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.authorization.SignInFragment">

    <TextView
        android:id="@+id/tv_sign_in"
        style="@style/MontserratStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/sign_in"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/et_first_name"
        app:layout_constraintEnd_toEndOf="@+id/et_first_name"
        app:layout_constraintStart_toStartOf="@+id/et_first_name" />

    <EditText
        android:id="@+id/et_first_name"
        style="@style/EditTextStyle"
        android:background="@drawable/edit_text"
        android:hint="@string/first_name"
        android:paddingStart="30dp"
        android:paddingEnd="25dp"
        app:layout_constraintBottom_toTopOf="@+id/et_last_name"
        app:layout_constraintEnd_toEndOf="@+id/et_last_name"
        app:layout_constraintStart_toStartOf="@+id/et_last_name" />

    <EditText
        android:id="@+id/et_last_name"
        style="@style/EditTextStyle"
        android:background="@drawable/edit_text"
        android:hint="@string/last_name"
        android:paddingStart="30dp"
        android:paddingEnd="25dp"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintEnd_toEndOf="@+id/et_email"
        app:layout_constraintStart_toStartOf="@+id/et_email" />

    <EditText
        android:id="@+id/et_email"
        style="@style/EditTextStyle"
        android:background="@drawable/edit_text"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="30dp"
        android:paddingEnd="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_in"
        android:layout_width="290dp"
        android:layout_height="46dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/button"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/et_email"
        app:layout_constraintStart_toStartOf="@+id/et_email"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <TextView
        android:id="@+id/tv_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/already_here_an_account"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@+id/btn_sign_in"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />

    <TextView
        android:id="@+id/tv_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/montserrat_medium"
        android:padding="4dp"
        android:text="@string/log_in"
        android:textColor="#254FE6"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_have_account"
        app:layout_constraintStart_toEndOf="@+id/tv_have_account"
        app:layout_constraintTop_toTopOf="@+id/tv_have_account" />

    <ImageButton
        android:id="@+id/btn_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="11dp"
        android:background="@drawable/ic_google"
        app:layout_constraintEnd_toStartOf="@+id/tv_sign_in_google"
        app:layout_constraintTop_toBottomOf="@+id/tv_have_account" />

    <TextView
        android:id="@+id/tv_sign_in_google"
        style="@style/MontserratStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/sign_in_with_google"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_google" />

    <ImageButton
        android:id="@+id/btn_apple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/ic_apple"
        app:layout_constraintStart_toStartOf="@+id/btn_google"
        app:layout_constraintTop_toBottomOf="@+id/btn_google" />

    <TextView
        android:id="@+id/tv_sign_in_apple"
        style="@style/MontserratStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:text="@string/sign_in_with_apple"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_apple"
        app:layout_constraintStart_toEndOf="@+id/btn_apple"
        app:layout_constraintTop_toTopOf="@+id/btn_apple" />

</androidx.constraintlayout.widget.ConstraintLayout>