<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="115dp"
    android:layout_height="150dp"
    android:layout_marginStart="6dp"
    android:layout_marginEnd="5dp"
    app:cardCornerRadius="10dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/tools_img_latest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundedImageView" />

    <TextView
        android:id="@+id/tv_category"
        style="@style/HomePoppinsText"
        android:layout_marginStart="7dp"
        android:layout_marginBottom="46dp"
        android:background="@drawable/text_back"
        android:paddingStart="7dp"
        android:paddingTop="3dp"
        android:paddingEnd="6dp"
        android:paddingBottom="3dp"
        android:text="@string/phones"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_brand_name"
        style="@style/HomePoppinsText"
        android:layout_marginStart="0dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/samsung_s10"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/tv_category"
        app:layout_constraintTop_toBottomOf="@+id/tv_category" />

    <TextView
        android:id="@+id/tv_brand_price"
        style="@style/HomePoppinsText"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_180_000"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_brand_name" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_back"
        android:src="@drawable/plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>